Revise README with comprehensive project details
Expanded the README to provide detailed application features, installation instructions, project structure, and troubleshooting tips.